# Torso-Stabilisation-Cpp

./: .bazelrc  .gitignore  .user.bazelrc  WORKSPACE  bazel-Torso-Stabilization-Cpp  bazel-bin  bazel-out  bazel-testlogs  imp_commands.txt  package.json
include/utils/: BUILD.bazel  IMU_server.hpp  mp_utils.hpp
mediapipe/calculators/tensor/: image_to_tensor_calculator.cc
mediapipe/models/: BUILD
src/models/: BUILD.bazel
src/tests/: BUILD.bazel  imu_test.cpp  midas_test.cpp  mp_test.cpp
src/utils/: BUILD.bazel  IMUServer.cpp  IMUTracker.cpp  IMU_server.cpp  IMU_tracker.cpp  midas_utils.cpp  mp_utils.cc
