cc_binary(
    name = "mp_test",
    srcs = ["mp_test.cpp"],
    deps = [
        "//src/utils:mp_utils",
        "@bazel_tools//tools/cpp/runfiles", 
    ],
    
    
)
cc_binary(
    name = "midas_test",
    srcs = ["midas_test.cpp"],
    deps = [
        "//src/utils:midas_utils",
        "@linux_opencv//:opencv",
        "@bazel_tools//tools/cpp/runfiles", 
    ],
    data = [
        "//src/models:dpt_swin2_tiny_256_torchscript",  # <- add this
    ],
)

cc_binary(
    name = "imu_test",
    srcs = ["imu_test.cpp"],
    deps = [
        "//src/utils:imu_server",      # Needs websocketpp + asio
        "//src/utils:imu_tracker",     # Needs Eigen
        "@com_google_absl//absl/log",
        "@com_github_nlohmann_json//:json",
        "@eigen//:eigen3",              # Correct: eigen3, not eigen
    ],
    copts = ["-std=c++17"], 
)
