cc_library(
    name = "mp_utils",
    srcs = ["mp_utils.cpp"],
    deps = [
        "//include/utils:mp_utils",
        "//mediapipe/tasks/cc/vision/hand_landmarker:hand_landmarker",
        "//mediapipe/framework/formats:image",
        "@com_google_absl//absl/log",
    ],
    visibility = ["//visibility:public"],
)
cc_library(
    name = "midas_utils",
    srcs = ["midas_utils.cpp"],
    deps = [
        "//include/utils:midas_utils",  # for "utils/midas_utils.hpp"
        "@libtorch//:torch",
        "@linux_opencv//:opencv",
    ],
    
    visibility = ["//visibility:public"],
)
